2012-07-29  Maurice Berk <maurice.berk01@imperial.ac.uk>

    * R/sme.R: removed superfluous names from degrees of freedom attribute returned by logLik.sme

2012-07-27  Maurice Berk <maurice.berk01@imperial.ac.uk>

    * R/sme.R: fixed logLik.sme to read the degrees of freedom from the correct object field, fixed
    sme.list to properly return model residuals

2012-07-20  Maurice Berk <maurice.berk01@imperial.ac.uk>

    * src/SME.c: removed original implementation of degrees of freedom calculation which had been
    commented out but remained in the file for some reason

2012-07-19  Maurice Berk <maurice.berk01@imperial.ac.uk>

    * R/sme.R: added getRoughnessMatrix(), modified vcov.sme to accommodate this

    * man/getRoughnessMatrix.Rd: new help file to accompany the new function

    * NAMESPACE: updated namespace to export getRoughnessMatrix

2012-07-17  Maurice Berk <maurice.berk01@imperial.ac.uk>

    * src/SME.c: minor optimizations to MStep()

2012-07-14  Maurice Berk <maurice.berk01@imperial.ac.uk>

    * DESCRIPTION: Version is now 0.4

    * R/sme.R: sme.data.frame now correctly returns D as a matrix rather than a vector

    * src/SME.h: added N as a parameter to EStep()

    * src/SME.c: added N as a parameter to EStep(), minor optimizations to EStep(), improved
    debugging output when using the verbose parameter